--- a/views/layout.njk
+++ b/views/layout.njk
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/assets/gym.ico" type="image/x-icon">
     <title>Gym Manager</title>
 
     <link rel="stylesheet" href="/styles.css">
