--- a/public/styles.css
+++ b/public/styles.css
@@ -178,7 +178,7 @@ input[type="radio"] {
     margin-right: 4px;
 }
 
-button[type="submit"] {
+button[type="submit"], a.button {
     width: 100%;
     background-color: var(--primary-color);
     color: white;
@@ -187,4 +187,11 @@ button[type="submit"] {
     border: none;
     border-radius: 8px;
     font-size: 16px;
+    cursor: pointer;
+}
+
+a.button {
+    display: block;
+    text-align: center;
+    text-decoration: none;
 }
