--- a/views/instrutores/edit.njk
+++ b/views/instrutores/edit.njk
@@ -4,18 +4,14 @@
     <form class="card" method="POST" action="/instrutores">
         <section class="avatar" 
         style="background: url(https://source.unsplash.com/collection/3465564/500x500) 
-               no-repeat center center/ cover;">
-
+                no-repeat center center/ cover;">
 
         </section>
 
         <section class="details">
-
-            <h3>Novo Instrutor</h3>
+            <h3>Editar Instrutor</h3>
 
             {%include './_form.njk'%}
-            
         </section>
     </form>
-
 {% endblock content %}
