--- a/views/instrutores/show.njk
+++ b/views/instrutores/show.njk
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="card">
         <section class="avatar" 
-        style="background: url({{instructor.avatar_url}}) 
+        style="background: url(https://source.unsplash.com/collection/3465564/500x500) 
                no-repeat center center/ cover;">
 
 
@@ -41,6 +41,8 @@
                 <div>Desde</div>
                 <div>{{instructor.created_at}}</div>
             </div>
+
+            <a href="#" class="button">Editar</a>
             
         </section>
     </div>
