birth date fixed

--- a/views/instrutores/_form.njk
+++ b/views/instrutores/_form.njk
@@ -1,20 +1,20 @@
 <div class="item">
     <div>
-        <input type="url" name="avatar_url" placeholder="http://">
+        <input type="url" name="avatar_url" placeholder="http://" value="{{instructor.avatar_url}}">
     </div>
 </div>
 
 <div class="item">
     <div>Instrutor</div>
     <div>
-        <input type="text" name="name" placeholder="Nome completo">
+        <input type="text" name="name" placeholder="Nome completo" value="{{instructor.name}}">
     </div>
 </div>
 
 <div class="item">
     <div>Data de nascimento</div>
     <div>
-        <input type="date" name="birth">
+        <input type="date" name="birth" value="{{instructor.birth}}">
     </div>
 </div>
 
@@ -22,10 +22,23 @@
     <div>Sexo</div>
     <div>
         <span>
-            <input type="radio" name="gender" value="M" checked>Masculino
+            <input 
+                type="radio" 
+                name="gender" 
+                value="M" {% if (instructor.gender == "M") or (instructor.gender == "") %}
+                    checked
+                {% endif %}                
+                >Masculino
         </span>
         <span>
-            <input type="radio" name="gender" value="F">Feminino
+            <input 
+                type="radio" 
+                name="gender" 
+                value="F" 
+                {% if instructor.gender == "F" %}
+                    checked
+                {% endif %} 
+            >Feminino
         </span>
     </div>
 </div>
@@ -33,7 +46,12 @@
 <div class="item">
     <div>Acompanhamento</div>
     <div>
-        <input type="text" name="services" placeholder="Separe os serviços por vírgula">
+        <input 
+            type="text" 
+            name="services" 
+            placeholder="Separe os serviços por vírgula"
+            value="{{instructor.services}}"
+            >
     </div>
 </div>
 
