--- a/views/instrutores/edit.njk
+++ b/views/instrutores/edit.njk
@@ -3,7 +3,7 @@
 {% block content %}
     <form class="card" method="POST" action="/instrutores">
         <section class="avatar" 
-        style="background: url(https://source.unsplash.com/collection/3465564/500x500) 
+        style="background: url({{instructor.avatar_url}}) 
                 no-repeat center center/ cover;">
 
         </section>
