Edit teacher finished

--- a/views/instrutores/show.njk
+++ b/views/instrutores/show.njk
@@ -38,11 +38,11 @@
             </div>
 
             <div class="item">
-                <div>Desde</div>
+                <div>Desde (mm/dd/aaaa)</div>
                 <div>{{instructor.created_at}}</div>
             </div>
 
-            <a href="#" class="button">Editar</a>
+            <a href="/instrutores/{{ instructor.id }}/edit" class="button">Editar</a>
             
         </section>
     </div>
