--- a/views/instrutores/edit.njk
+++ b/views/instrutores/edit.njk
@@ -1,7 +1,7 @@
 {% extends 'layout.njk' %}
 
 {% block content %}
-    <form class="card" method="POST" action="/instrutores">
+    <form class="card" method="POST" action="/instrutores?_method=PUT">
         <section class="avatar" 
         style="background: url({{instructor.avatar_url}}) 
                 no-repeat center center/ cover;">
@@ -12,6 +12,10 @@
             <h3>Editar Instrutor</h3>
 
             {%include './_form.njk'%}
+
+            <!--Input necessário para q seja repassado o ID para a rota put-->
+            <input type="hidden" name="id" value="{{ instructor.id }}">
+            
         </section>
     </form>
 {% endblock content %}
