--- a/public/styles.css
+++ b/public/styles.css
@@ -207,3 +207,68 @@ button[type="submit"]:hover {
 
     transition: background-color 500ms;
 }
+
+.tableContainer {
+    display: block;
+}
+
+.tableContainer table{
+    width: 100%;
+    padding: 24px;
+    text-align: left;
+    border-collapse: 0;
+    border-spacing: 0;
+}
+
+.tableContainer table thead th{
+    text-align: center;
+    padding-bottom: 12px;
+    color: #777;
+    font-weight: 600;
+}
+
+.tableContainer tbody tr td {
+    padding: 15px 0;
+    border-top: 2px solid coral;
+}
+
+.tableContainer tbody tr:first-child td {
+    border-top: none;
+}
+
+.tableContainer tbody tr td:first-child {
+    display: grid;
+    grid-template-columns: 60px 1fr;
+    align-items: center;
+    text-transform: capitalize;
+    
+    
+}
+
+.tableContainer tbody tr td:last-child {
+    text-align: center;
+}
+
+.tableContainer tbody tr td:last-child a {
+    text-decoration: none;
+    background-color: var(--secondary-color);
+    padding: 8px 16px;
+    border-radius: 10px;
+    color: var(--primary-color);
+}
+
+.tableContainer .instructorIcon {
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    border: 2px solid white;
+    box-shadow: 2px 1px black;
+}
+
+
+
+
+
+
+
+
