--- a/views/instrutores/index.njk
+++ b/views/instrutores/index.njk
@@ -1,47 +1,32 @@
 {% extends 'layout.njk' %}
 
 {% block content %}
-    <div class="card">
-        <section class="avatar" 
-        style="background: url(https://source.unsplash.com/collection/3465564/500x500) 
-               no-repeat center center/ cover;">
-
-
-        </section>
-
-        <section class="details">
-
-            <h3>Detalhes</h3>
-
-            <div class="item">
-                <div>Instrutor</div>
-                <div>Bambam</div>
-            </div>
-
-            <div class="item">
-                <div>Idade</div>
-                <div>39</div>
-            </div>
-
-            <div class="item">
-                <div>Sexo</div>
-                <div>Masculino</div>
-            </div>
-
-            <div class="item">
-                <div>Acompanhamento</div>
-                <div>
-                    <span>Musculação</span>
-                    <span>Natação</span>
-                </div>
-            </div>
-
-            <div class="item">
-                <div>Desde</div>
-                <div>26/08/2018</div>
-            </div>
-            
-        </section>
+    <div class="card tableContainer">
+        <table>
+            <thead>
+                <tr>
+                    <th>Nome</th>
+                    <th>Acompanhamento</th>
+                    <th>Ação</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for instructor in instructors %}
+                    <tr>
+                        <td>
+                            <span class="instructorIcon" style="background-image: url({{ instructor.avatar_url }});
+                                        background-size: cover;
+                                        background-position: center;"></span>
+                            {{instructor.name}}
+                        </td>
+                        <td>{{ instructor.services }}</td>
+                        <td>
+                            <a href="/instrutores/show/{{instructor.id}}">Ver</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 
 {% endblock content %}
