--- a/views/instructors/index.njk
+++ b/views/instructors/index.njk
@@ -2,6 +2,8 @@
 
 {% block content %}
     <div class="card tableContainer">
+        <a href="/instrutores/create" class="newResource">Novo</a>
+
         <table>
             <thead>
                 <tr>
