--- a/views/layout.njk
+++ b/views/layout.njk
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/assets/gym.ico" type="image/x-icon">
-    <title>Gym Manager</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="/assets/gym.ico" type="image/x-icon">
+        <title>Gym Manager</title>
 
-    <link rel="stylesheet" href="/styles.css">
-</head>
-<body>
-    <header>
-        <nav class="links">
-            <a href="/" class="active">Instrutores</a>
-            <a href="/membros">Membros</a>
+        <link rel="stylesheet" href="/styles.css">
+    </head>
+    <body>
+        <header>
+            <nav class="links">
+                <a href="/instrutores">Instrutores</a>
+                <a href="/membros">Membros</a>
 
-        </nav>
-    </header>
+            </nav>
+        </header>
 
-    {% block content %}
-    {% endblock content %}
-</body>
+        {% block content %}{% endblock content %}
+
+        <script src="/scripts.js"></script>
+    </body>
 </html>
