--- a/views/members/index.njk
+++ b/views/members/index.njk
@@ -8,6 +8,8 @@
                 <tr>
                     <th>Nome</th>
                     <th>E-mail</th>
+                    <th>Peso</th>
+                    <th>Altura</th>
                     <th>Ação</th>
                 </tr>
             </thead>
@@ -21,6 +23,8 @@
                             {{member.name}}
                         </td>
                         <td>{{ member.email }}</td>
+                        <td>{{ member.weight }}kg</td>
+                        <td>{{ member.height }}cm</td>
                         <td>
                             <a href="/membros/show/{{member.id}}">Ver</a>
                         </td>
