--- a/src/app/views/instructors/index.njk
+++ b/src/app/views/instructors/index.njk
@@ -1,9 +1,7 @@
 {% extends 'layout.njk' %}
-
 {% block content %}
     <div class="card tableContainer">
         <a href="/instrutores/create" class="newResource">Novo</a>
-
         <table>
             <thead>
                 <tr>
@@ -16,19 +14,19 @@
                 {% for instructor in instructors %}
                     <tr>
                         <td>
-                            <span class="instructorIcon" style="background-image: url({{ instructor.avatar_url }});
-                                        background-size: cover;
-                                        background-position: center;"></span>
-                            {{instructor.name}}
+                            <span
+                                class="instructorIcon"
+                                style="background-image: url({{ instructor.avatar_url }}); background-size: cover;
+                                    background-position: center;"></span>
+                            {{ instructor.name }}
                         </td>
                         <td>{{ instructor.services }}</td>
                         <td>
-                            <a href="/instrutores/show/{{instructor.id}}">Ver</a>
+                            <a href="/instrutores/show/{{ instructor.id }}">Ver</a>
                         </td>
                     </tr>
                 {% endfor %}
             </tbody>
         </table>
     </div>
-
 {% endblock content %}
