--- a/src/app/views/members/show.njk
+++ b/src/app/views/members/show.njk
@@ -3,8 +3,7 @@
     <div class="card">
         <section
             class="avatar"
-            style="background: url({{ member.avatar_url }})
-                               no-repeat center center/ cover;"></section>
+            style="background: url({{ member.avatar_url }}) no-repeat center center/ cover;"></section>
         <section class="details">
             <h3>Detalhes</h3>
             <div class="item">
@@ -43,6 +42,10 @@
             <div class="item">
                 <div>Altura (cm)</div>
                 <div>{{ member.height }}</div>
+            </div>
+            <div class="item">
+                <div>Aluno de</div>
+                <div>{{ member.instructor_name }}</div>
             </div>
             <a href="/membros/{{ member.id }}/edit" class="button">Editar</a>
         </section>
